styles.css
/* css styles */

/* hides error messages - good for Production, bad for development */
/* .observablehq--error {  
  display: none;
} */

.navbar-logo {
  max-height: 65px;
}

/* Main Styling */
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');

:root {
  color-scheme: light dark;
  --blue: #1e90ff;
  --white: #ffffff; 
  --atlasGreen: #2E7636;
}

figure {
  padding-top: 20px;
}

/* body text and headings */
body {
  line-height: 1.6;
  font-size: 1.25rem;
  font-family: "IBM Plex Sans", "Source Serif Pro";
  color: light-dark(#333b3c, #efefec);
  background-color: light-dark(white, #292929);
}

h1 {
  font-size: 2em;
  font-weight: 700;
}

h1.title {
  text-align: center;
  font-size: 2.25em;
}

h2.key-insights {
  text-align: center;
  padding: 1.5em;
}

h2 {
  font-weight: 700;
  /* padding-top: 30px; */
}

h3 {
  font-weight: 700;
  /* padding-top: 20px; */
}

p {
  margin-top: 0;
  margin-bottom: 1rem;
}

strong {
  font-weight: 600;
}

.nav-item {
  display: flex;
  align-items: center;
  /* justify-content: center; */
  margin-left: 10px;
}

/* Style links */
main a[href] {
  color: var(--atlasGreen);
  text-decoration: none;
}

a[href]:hover,
a[href]:active {
  color: var(--atlasGreen);
  text-decoration: underline;
}

form[class^="oi-"] {
  flex-wrap: wrap !important;
}

form[class^="oi-"]>label {
  padding: 8px 0 !important;
  font-family: "IBM Plex Sans";
  font-size: 12px;
  text-transform: uppercase;
  border-bottom: 1px solid #333;
  width: 100% !important;
}

form[class^="oi-"] select {
  border: 0;
  height: 40px;
  font-family: "IBM Plex Sans";
  font-size: 14px;
}

form[class^="oi-"] div {
  font-family: "IBM Plex Sans";
  font-size: 14px;
  padding: 12px 0;
}

[class^="oi-"] input {
  accent-color:var(--atlasGreen);
}

form[class^="oi-"] button {
  background: #FFFFFF;
  border: 1px solid black;
  padding: 10px 20px;
}

form[class^="oi-"] button:hover {
  background: #EFEFEF;
}

form[class^="oi-"] button:active {
  background: #DCDCDC;
}

/* Options to make checkbox underline a bit better */
/* form[class*="checkbox"] > label {
  width: auto !important;
  padding-right: 14px !important;
  border-bottom: 1px solid #333;
  
  
}

form[class*="checkbox"] {
  display: flex;
  flex-direction: column !important;
  align-items: flex-start !important;
} */


/* Class for floating TOC */

.floating-toc {
  position: fixed;
  bottom:0;
  left:0;
  right:0;
  padding: 10px;
  background: #fff;
  border-top: 1px solid #ccc;
  z-index: 100;
  text-align: center; 
}

a.toc-link.active {
  font-weight: bold;
  /* color: #d66b44;  */
  text-decoration: underline;
}

.hero_image {
  width: 100%;
  height: 175px;
  object-fit: cover;
  overflow: hidden;
  /* margin-bottom: -23px; */
}

